elixir/force-app/main/default/objects/Loan_Warehouse__c/Loan_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Loan Warehouse</label>
    <nameField>
        <label>Loan Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Warehouse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>