elixir/force-app/main/default/objects/Loan_Warehouse__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Loan Warehouse</relationshipLabel>
    <relationshipName>Loan_Warehouse</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>