elixir/force-app/main/default/objects/Loan_Warehouse__c/fields/Balance_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Balance_Outstanding__c</fullName>
    <label>Balance Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>