elixir/force-app/main/default/objects/Loan_Warehouse__c/fields/Previous_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Previous_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Loan Warehouse (Previous Warehouse)</relationshipLabel>
    <relationshipName>Loan_Warehouse1</relationshipName>
    <type>Lookup</type>
</CustomField>