elixir/force-app/main/default/objects/Loan_Warehouse__c/fields/Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>Principal_Paid__c</fullName>
    <label>Principal Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>