elixir/force-app/main/default/objects/Loan_Warehouse__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Loan Warehouse</relationshipLabel>
    <relationshipName>Loan_Warehouse</relationshipName>
    <type>Lookup</type>
</CustomField>