elixir/force-app/main/default/objects/Loan_Warehouse__c/fields/Warehouse_Changed_From__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Changed_From__c</fullName>
    <label>Warehouse Changed From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>