elixir/force-app/main/default/objects/Loan_Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CL_Contract__c</columns>
    <columns>Application__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Previous_Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>